--- a/.github/workflows/fetch_and_upload.yml
+++ b/.github/workflows/fetch_and_upload.yml
@@ -5,6 +5,9 @@ on:
     - cron: '*/5 * * * *'  # Runs every 5 minutes
   workflow_dispatch:
 
+permissions:
+  contents: write  # Grant write permissions
+
 jobs:
   fetch-and-upload:
     runs-on: ubuntu-latest
@@ -24,15 +27,17 @@ jobs:
           pip install requests
 
       - name: Fetch 511 Alerts and Convert to GeoJSON
-        run: python fetch_511_data.py
+        run: python AlertsAPI/fetch_511_data.py
 
       - name: List files
-        run: ls -la
+        run: ls -la AlertsAPI
 
       - name: Commit GeoJSON file
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
-          git add alerts.geojson
+          git add AlertsAPI/alerts.geojson
           git commit -m 'Add GeoJSON file'
           git push
